# gazebo_plugins

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  WindPlugin.cc  cmake_install.cmake  control_input_plugin.cpp  control_plugin.cpp  diff.txt  e423_data.txt  gazebo_wind_field_plugin.cpp  license.txt  lift_distribution_plugin.cpp  liftdrag_plugin.cpp  liftdrag_with_lookup_plugin.cpp  parse_airfoil_data_file.py  parse_file.py  parse_lift_dist_plugin_logfile.py  parse_liftdrag_logfile.py  rigid_wing_world (copy).world  rigid_wing_world.world  send_protobuf_msgs.cc  verification_components_plugin.cpp  verify_lift_drag_plugin.py  verify_liftdrag_plugin.cpp  visualize_vector_plugin.cpp  waypoint_following_control_plugin.cpp
include/: WindPlugin.hh  common.h  control_input_plugin.hh  control_plugin.hh  gazebo_wind_field_plugin.h  lift_distribution_plugin.h  send_protobuf_msgs.hh  verification_components_plugin.hh  verify_liftdrag_plugin.hh  visualize_vector_plugin.hh  waypoint_following_control_plugin.hh
include/liftdrag_plugin/: liftdrag_plugin.h  liftdrag_with_lookup_plugin.h
rigid_wing/: model (copy).sdf  model.config  model.sdf
